<resources>
    <string name="app_name">XPlore UCSD</string>
    <string name="landmark_description_demo">© 2017 the Board of Regents of the University of California\n\nThe Geisel Library is the main library building on the University of California, San Diego campus.\n\nThe building is named in honor of Audrey and Theodor Seuss Geisel (better known as Dr. Seuss) for the generous contributions they have made to the library and their devotion to improving literacy.\n\nThe building is featured in the UCSD logo and is the most recognizable building on campus. It is located in the center of the campus with the library walk to its south, Thurgood Marshall College to its West and Earl Warren College to its East.\n\nThe library was simply called the "Central Library" until a renovation was completed in 1993. The library was rededicated as the University Library Building. It was renamed the Geisel Library Building in 1995.</string>
    <string name="access_token">pk.eyJ1IjoiamFzb255dXlqYyIsImEiOiJjazdmOTRzcTMwMGg0M2dtazhmMWx1MTc4In0.A6Lq7IZw91jLnkDgKXNfsg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string-array name="list_of_must_go">
        <item>Geisel Library</item>
        <item>Peterson Hall</item>
        <item>Mayer Hall</item>
        <item>Price Center</item>
        <item>RIMAC Gym</item>
        <item>American Institute</item>
        <item>Rady School of Management</item>
        <item>Sun God Statue</item>
        <item>64 Degrees</item>
        <item>Warren Bear</item>
        <item>Career Services Center</item>
        <item>Canyonview pool</item>
        <item>Jacobs School of Engineering Building and Fallen Star</item>
        <item>Atkinson Hall</item>
        <item>Galbraith Hall</item>
        <item>York Hall</item>
        <item>Biomedical Library</item>
        <item>Conrad Prebys Music Center</item>
        <item>Keeling Apartment</item>
        <item>Pharmaceutical Sciences Building</item>
        <item>OceanView</item>
    </string-array>
    <string-array name="warrenCollege">
        <item>Canyonview pool</item>
        <item>Warren Bear</item>
        <item>Jacobs School of Engineering Building and Fallen Star</item>
    </string-array>
    <string name="are_you_a">Are you a</string>
    <string name="test_nothing_selected">You have selected nothing.</string>
    <string name="next_button_text">Next</string>
    <string-array name="type_array">
        <item>student</item>
        <item>visitor</item>
    </string-array>
    <string-array name="time">
        <item>Please choose the time</item>>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>
    <string name="SpinnerAtTimeSelect"> </string>
    <string name="ButtonAtTimeSelect">Next</string>
    <string name="select_the_time">Select the time</string>
    <string name="time_cannot_be_zero">Houres and Minutes can\'t be 0.</string>
    <string name="i_don_t_have_time_constraints">I don\'t have time constraints</string>
    <string name="_00_00">00:00</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="places_biomedical_library">Biomedical Library</string>
    <string name="places_card_description">“The Biomedical Library is always the go-to place for students looking for a quiet and immersive study envrionment.”</string>
    <string name="places_learn_more">Learn More</string>
    <string name="places_place_of_the_day">Place of the Day</string>
    <string name="places_places_on_campus">Places on Campus</string>
    <string name="places_search_places_or_key_words">Search places or key words</string>
    <string name="About"><u>About</u></string>
    <string name="demo_about">Geisel Library is the main library building of the University of California San Diego Library. It is named in honor of Audrey and Theodor Seuss Geisel(better known as Dr. Seuss).</string>
    <string name="style"><u>Style &amp; Architecture</u></string>
    <string name="demo_style">The building\'s distinctive Brutalist architecture has resulted in its being featured in the UC San Diego logo and becoming the most recognizable building on campus.</string>
    <string name="suggestion">You May Also Want to Know…</string>
    <string name="history_1">The UC San Diego Library, ranked among the nation\'s top 25 public academic libraries, plays a critical role in advancing and supporting the university\'s research, teaching, patient care, and public service missions. The world-renowned research for which UC San Diego is known starts at the UC San Diego Library, which provides the foundation of knowledge needed to advance cutting-edge discoveries in a wide range of disciplines, from healthcare and science to public policy and the arts. In 1958, Roger Revelle\'s efforts to establish an Institute of Science and Engineering adjacent to the Scripps Institution of Oceanography were spearheaded by his desire to immediately construct a science and library building on the present Revelle College site. When the university was eventually constructed, university librarian Melvin Voigt devised a plan to purchase books for the three new UC campuses: UC San Diego, UC Santa Cruz, and UC Irvine. The first Science and Engineering Library in Urey Hall satisfied the science-focused school\'s needs. However, as faculty recruits began to found social science and humanities departments, it became clear to Chancellor John Semple Galbraith that the time had come to establish the campus\'s main library collections. The library was designed by William Pereira and opened in 1970 as the Central Library. It was renovated in 1993 and rededicated as the University Library Building, and renamed Geisel Library in 1995. The distinctive original building was designed in the late 1960s by William Pereira to sit at the head of a canyon. The building\'s arches, in combination with the design of the individual floors, are intended to look like hands holding up a stack of books. William Pereira &amp; Associates prepared a detailed report in 1969. Pereira originally conceived a steel-framed building, but this was changed to reinforced concrete to save on construction and maintenance costs. This change of material presented an opportunity for a more sculptural design. It was envisioned that future additions to the original building would form terraced levels around the tower base descending into the canyon. In keeping with the original master plan, these are "deliberately designed to be subordinated to the strong, geometrical form of the existing library. "Within its two subterranean levels are the other library sections as well as study spaces and computer labs. The tower is a prime example of brutalist architecture. It rises 8 stories to a height of 110 ft (33.5 m).</string>
    <string name="history_2">The library was designed by William Pereira and opened in 1970 as the Central Library. It was renovated in 1993 and rededicated as the University Library Building, and renamed Geisel Library in 1995. The distinctive original building was designed in the late 1960s by William Pereira to sit at the head of a canyon. The building\'s arches, in combination with the design of the individual floors, are intended to look like hands holding up a stack of books. William Pereira &amp; Associates prepared a detailed report in 1969. Pereira originally conceived a steel-framed building, but this was changed to reinforced concrete to save on construction and maintenance costs. This change of material presented an opportunity for a more sculptural design. It was envisioned that future additions to the original building would form terraced levels around the tower base descending into the canyon. In keeping with the original master plan, these are "deliberately designed to be subordinated to the strong, geometrical form of the existing library. "Within its two subterranean levels are the other library sections as well as study spaces and computer labs. The tower is a prime example of brutalist architecture. It rises 8 stories to a height of 110 ft (33.5 m). The five upper stories of the tower house collections, individual study space, and group study rooms.</string>
    <string-array name="placesName">
        <item>Canyonview pool</item>
        <item>Warren bear</item>
        <item>Fallen Star </item>
        <item>Atkinson Hall</item>
        <item>Conrad Prebys Music Center</item>
        <item>Biomedical library </item>
        <item>Pharmaceutical Sciences Building </item>
        <item>Big Red Chair </item>
        <item>Keeling Apartment</item>
        <item>York Hall</item>
        <item>Galbraith Hall</item>
        <item>Mayer Hall </item>
        <item>64 Degrees </item>
        <item>Sun God statue </item>
        <item>Oceanview Restaurant</item>
        <item>Peterson Hall</item>
        <item>Rady School of management</item>
        <item>RIMAC Field/gym </item>
        <item>American Institute </item>
        <item>Career service center  </item>
        <item>Geisel library </item>
        <item>Price Center</item>
        <item>UCSD Bookstore</item>
    </string-array>
    <string-array name="availability">
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
        <item>Open ・Closes at 11pm</item>
        <item>Open ・Closes at 9pm</item>>
    </string-array>
    <string-array name="distances">
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>>
        <item>225m</item>
        <item>200m</item>
    </string-array>
    <string name="main_page_places_near_you">Places Near You</string>
    <string name="main_page_must_see_landmarks_title">Must-See Landmarks</string>
    <string name="main_page_must_see_landmarks_subtitle">Eye-opening sights for every tourist to UC San Diego.</string>
    <string name="main_page_must_see_landmarks_tour_name">UCSD’s Landmark Tour</string>
    <string name="main_page_academic_spots_title">Academic Spots</string>
    <string name="main_page_academic_spots_subtitle">Learn about the academics of this top 10 public university.</string>
    <string name="main_page_academic_spots_tour_name">Academic Highlights Tour</string>
    <string name="main_page_campus_life_title">Campus Life</string>
    <string name="main_page_campus_life_subtitle">What is it like being a student here at UC San Diego?</string>
    <string name="main_page_campus_life_tour_name">One-day as Student Tour</string>
</resources>